--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0px;
     font-family: 'Roboto', sans-serif;
 }
 #name{
@@ -7,13 +8,25 @@ body{
 .half-width{
     float: left;
     width: 40% ;
-    margin: 4% 2%;
-    padding: 2% 2%;
+    margin-left: 5%;
+    padding-left: 2%;
     
 }
 .half-width img{
     width: 100%;
 }
-#head{
-    
+.top-banner{
+    background-repeat: no-repeat;
+    background-image: url("img/top-banner.png");
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightSalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
 }
