--- a/style.css
+++ b/style.css
@@ -2,8 +2,14 @@ body{
     margin: 0px;
     font-family: 'Roboto', sans-serif;
 }
-#name{
+#Orange-color{
     color: gold;
+}
+h1{
+    font-size: 50px;
+}
+p{
+    color: dimgray;
 }
 .half-width{
     float: left;
@@ -21,6 +27,7 @@ body{
 }
 section{
     height: 500px;
+    padding-bottom: 100px;
 }
 .link-button{
     text-decoration: none;
@@ -29,4 +36,35 @@ section{
     border-radius: 5px;
     color: white;
     font-weight: bold;
+}
+.dream-area{
+    background-image: url("img/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;   
+}
+.exp{
+    height: 70%;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 2px;
+    border-image-slice: 2px ;
+}
+.experience{
+    background-image: url("img/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#Full-Stack{
+    border-left: 7px Solid;
+    border-image: linear-gradient(180deg,lightSalmon, tomato);
+    border-image-slice: 1;
+}
+#Baby-Web{
+    border-left: 7px Solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+#footer{
+    text-align: center;
+    font-size: small;
+    color: black;
 }
